username, add login-verification code, add swager for func getauth
